Fix bugs in the interpretation of some words, update example programs